--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
         <li><i class="fas fa-envelope"></i><a href="#"> Contact</a></li>
       </ul>
     </nav>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
